[package]
name = "hyper_fetch"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4"
thiserror = "1.0"
redis = { version = "0.23.0", features = ["tokio-comp"] }
futures = "0.3"
config = "0.13"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
select = "0.6.0"

[dev-dependencies]
actix-rt = "2.8.0"
mockall = "0.11.4"

