[package]
name = "hyper_fetch"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.8.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4"
thiserror = "1.0"
redis = { version = "0.23.0", features = ["tokio-comp"] }
futures = "0.3"
config = "0.13"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
select = "0.6.0"
scraper = "0.17.1"
actix-web = "4.4"
urlencoding = "2.1.3"
lazy_static = "1.5.0"
headless_chrome = "0.9"
regex = "1.11.1"
rss = "2.0.12"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
utoipa = "5"
utoipa-actix-web = "0.1"
actix-governor = "0.5"

[dev-dependencies]
actix-rt = "2.8.0"
mockall = "0.11.4"
